--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -3,9 +3,11 @@ plugins {
     id "kotlin-android"
     // The Flutter Gradle Plugin must be applied after the Android and Kotlin Gradle plugins.
     id "dev.flutter.flutter-gradle-plugin"
-    id 'com.google.gms.google-services'
+     ///: TODO: Add firebase plugins 
+
+    /* id 'com.google.gms.google-services'
     id 'com.google.firebase.crashlytics'
-    id 'com.google.firebase.firebase-perf'
+    id 'com.google.firebase.firebase-perf' */
 }
 
 def localProperties = new Properties()
