--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: m_d_template_app
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -19,8 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-    sdk: '>=2.17.1 <4.0.0'
-
+  sdk: ">=2.17.1 <4.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -31,22 +30,23 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  
+
   shared_preferences: ^2.5.3
-  # Firebase
-  firebase_core: ^3.8.0
-  firebase_auth: ^5.3.3
-  firebase_analytics: ^11.3.5
-  firebase_messaging: ^15.1.5
-  firebase_crashlytics: ^4.1.5
-  firebase_performance: ^0.10.0+10
-  firebase_dynamic_links: ^6.0.10
-  firebase_remote_config: ^5.1.5
+
+  #: TODO: Add firebase plugins
+
+  # # Firebase
+  # firebase_core: ^3.8.0
+  # firebase_auth: ^5.3.3
+  # firebase_analytics: ^11.3.5
+  # firebase_messaging: ^15.1.5
+  # firebase_crashlytics: ^4.1.5
+  # firebase_performance: ^0.10.0+10
+  # firebase_dynamic_links: ^6.0.10
+  # firebase_remote_config: ^5.1.5
 
   flutter_screenutil: ^5.9.3
   universal_platform: ^1.0.0+1
-
-
 
   internet_connection_checker_plus: ^2.7.1
 
@@ -55,9 +55,6 @@ dependencies:
   gap: ^3.0.1
 
   upgrader: ^11.3.1
-
-
-
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -80,7 +77,6 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
