--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,13 @@ dependencies:
   shared_preferences: ^2.5.3
 
   #: TODO: Add firebase plugins
+  #: 1- uncomment in pubspec.yaml
+  #: 2- uncomment in android/build.gradle
+  #: 3- uncomment in android/app/build.gradle
+  #: 4- uncomment in main_dev.dart and main_prod.dart
+  #: 5- uncomment in analytics_service.dart
+  #: 6- add google-services.json file to android/app/
+  #: 7- add google-services.json file to ios/Runner/
 
   # # Firebase
   # firebase_core: ^3.8.0
