--- a/.gitignore
+++ b/.gitignore
@@ -72,6 +72,7 @@ unlinked_spec.ds
 **/android/key.properties
 *.jks
 android/fastlane/report.xml
+android/app/.cxx
 
 # iOS/XCode related
 **/ios/**/*.mode1v3
