--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   # firebase_remote_config: ^5.1.5
 
   flutter_screenutil: ^5.9.3
+  flutter_svg: ^2.1.0
   universal_platform: ^1.0.0+1
 
   internet_connection_checker_plus: ^2.7.1
