--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   flutter_screenutil: ^5.9.3
   universal_platform: ^1.0.0+1
 
-  internet_connection_checker_plus: ^2.7.1
+  connectivity_plus: ^5.0.2
 
   cached_network_image: ^3.4.1
   flutter_secure_storage: ^9.2.4
